syntax = "proto3";
package grpc;

service ChatServer {

    rpc SendChat (ChatRequest) returns (ChatReply) {}
    
    rpc JoinChannel (JoinRequest) returns (JoinReply) {}

    rpc LeaveChannel (LeaveRequest) returns (LeaveReply) {}

}

message ChatRequest {
    string username = 1;
    string channel = 2;
    string message = 3;
    uint64 timestamp = 4;
}

message ChatReply {
    bool successful = 1;
    uint64 timestamp = 2;
}

message JoinRequest {
    string username = 1;
    string channel = 2;
    uint64 timestamp = 3;
}

message JoinReply {
    bool successful = 1;
    uint64 timestamp = 2;
}

message LeaveRequest {
    string username = 1;
    string channel = 2;
    uint64 timestamp = 3;
}

message LeaveReply {
    bool successful = 1;
    uint64 timestamp = 2;
}